--- a/index.html
+++ b/index.html
@@ -23,10 +23,21 @@
         </div>
 
         <div class="hero-content">
-
+            <div class="box-1">
+                <div class="text-1">
+                    <h1>This website is awesome</h1>
+                </div>
+                <div class="text-2">
+                    <p>This website has some subtext that goes here under the main title. It's a smaller
+                        font and the color is lower contrast</p>
+                </div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="box-2">
+                <p>this is a placeholder for an image</p>
+            </div>
         </div>
     </div>
-    <div class="container-1"></div>
     <div class="container-2"></div>
     <div class="container-3"></div>
     <div class="footer"></div>
