--- a/index.html
+++ b/index.html
@@ -38,8 +38,41 @@
             </div>
         </div>
     </div>
-    <div class="container-2"></div>
-    <div class="container-3"></div>
+    <div class="container-2">
+        <div class="info">
+            <h1>Some random information.</h1>
+        </div>
+        <div class="blue-boxes">
+            <div class="box">
+                <div class="blue-box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="blue-box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="blue-box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="blue-box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-3">
+
+        <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe
+            people
+            will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+
+        <div class="by">
+            <h1>-Thor, God of Thunder</h1>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 
