--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
             <h1>-Thor, God of Thunder</h1>
         </div>
     </div>
+
+    <div class="container-4">
+        <div class="another-blue-box">
+            <div class="inner-box">
+                <div class="call">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up to our product by clicking that button right over there</p>
+                </div>
+                <button class="sign-up">Sign up</button>
+            </div>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 
