--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <p>Copyright © The Odin Project 2023</p>
+    </div>
 </body>
 
 </html>
